; ModuleID = '/home/carl/AnghaBench/redis/src/extr_rdb.c_rdbLoadBinaryFloatValue.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_rdb.c_rdbLoadBinaryFloatValue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rdbLoadBinaryFloatValue(i32* %0, float* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca float*, align 8
  store i32* %0, i32** %4, align 8
  store float* %1, float** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load float*, float** %5, align 8
  %8 = call i64 @rioRead(i32* %6, float* %7, i32 4)
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %14

11:                                               ; preds = %2
  %12 = load float*, float** %5, align 8
  %13 = call i32 @memrev32ifbe(float* %12)
  store i32 0, i32* %3, align 4
  br label %14

14:                                               ; preds = %11, %10
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i64 @rioRead(i32*, float*, i32) #1

declare dso_local i32 @memrev32ifbe(float*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
